Fix left column overflow

--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ header {
   text-align: center;
   background-color: #404041;
   color: #fff;
-  padding: 2.5%;
+  padding: 1.5%;
 }
 
 button {
@@ -81,10 +81,14 @@ button {
 }
 
 header h1 {
-  font-size: 50px;
+  font-size: 40px;
   font-weight: 700;
   line-height: 1;
   padding-bottom: 5px;
+}
+
+header h3 {
+  font-size: 15px;
 }
 
 .header-ruler,
@@ -93,7 +97,7 @@ header h1 {
 }
 
 .header-ruler {
-  width: 60px;
+  width: 45px;
   margin: 5px 10px;
 }
 
@@ -109,9 +113,9 @@ arranged in order that they appear in the html
 
 .left-column {
   width: 50vw;
-  height: 100vh;
   background-color: #f7f7f7;
   padding: 0 2.5%;
+  padding-bottom: 2.5%;
  }
 
 .gameplay-cont {
@@ -219,7 +223,6 @@ End of Latest Guess Container
 
 .right-column {
   width: 50vw;
-  height: 100vh;
   background-color: #d0d2d3;
 }
 
@@ -234,9 +237,11 @@ End of Latest Guess Container
   padding:  5% 2.5%;
   box-shadow: 1px 1px 1px #e4e4e4;
   border-radius: 2px;
+  font-size: 12px;
 }
 
 .set-range h3 {
+  font-size: 16px;
   margin-bottom: 2%;
 }
 
